<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Traits</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter your name&#8230;</string>
    <string name="go">Go!</string>
    <string name="share">Share</string>
    <string name="feeling_lucky">I Feel Lucky</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_font">Select A Font</string>
    <string name="normal">Normal</string>
    <string name="trash_a_name">Trash A Name</string>
    <string name="character_rating">Character Rating:</string>
    <string name="mode">Mode</string>
    <string name="choose_a_photo">Choose A Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="select_mode">Select Mode</string>
    <string name="alter_settings">Alter Settings</string>
    <string name="select_font_size">Select Font Size</string>
    <string name="select_font_style">Select Font Style</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_font_style">Font style</string>
    <string name="pref_add_trait">Add Word</string>
    <string name="pref_font_size_summary">Set font size</string>
    <string name="pref_font_style_summary">Set font style</string>
    <string name="pref_add_trait_summary">Add a new trait</string>
    <string name="pref_font_theme_summary">Black White</string>
    <string name="pref_manage_traits">Manage traits</string>    
    <string name="pref_manage_traits_summary">Manage your custom traits</string>    
    <string name="pref_set_theme">Set theme</string>
    <string name="pref_font_settings">Font Settings</string>
    <string name="pref_data_settings">Data Settings</string>
    <string name="pref_font_typeface">Type Face </string>
    <string name="pref_typeface_summary">Font Type Face</string>
    <string name="pref_font_typeface_style">Type Face Style</string>
    <string name="pref_typeface_style_summary">Type Face Style</string>
    <string name="pref_add_positive_trait">Add +ve trait </string>
    <string name="pref_add_positive_trait_summary">A word that describes positively</string>
    <string name="pref_add_negative_trait">Add -ve trait</string>
    <string name="pref_add_negative_trait_summary">A word that describes negatively</string>
    <string name="pref_gen_settings">Custom words</string>
    <string name="pref_gen_settings_summary">Use only the words you\'ve added</string>
    <string name="pref_generation_settings">Generation Settings </string>
    <string name="black_white">Black White</string> 
    <string name="white_black">White_Black</string> 
    <string name="add_new_trait">Add New Trait</string> 
    <string name="please_fill_in_a_value">Please fill in a value</string> 
    <string name="the_first_letter_shouldnt_be_number">The first letter should not be a number</string>
    <string name="font_settings">Font settings</string> 
    <string name="the_image">The Image</string>  
    <string name="save">Save</string>  
    <string name="more">More</string> 
    <string name="exit">Exit</string> 
    <string name="no_picture">No Picture</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    
    <string name="already_saved">Already saved</string>
    <string name="enter_name_and_press">Enter your name first and press GO</string>
    <string name="enter_name_before_sharing">Enter your name before sharing</string>
    <string name="saving">Saving&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="something_went_wrong_while">Something went wrong while trying to save image</string>
    <string name="no_cameras_found_on">"No cameras on this device</string>
    <string name="no_camera_found">No camera found&#8230;</string>
    <string name="please_type_a_name_first_in_box">Please type a name first in the box above</string>
    <string name="share_using">Share using&#8230;</string>
    <string name="generating">Generating&#8230;</string>
    <string name="loading_share_app_list">Loading share app list&#8230;</string>
    <string name="please_add_an_image_first">Please add an image first</string>
    <string name="traits_web_link">http://www.olympusinteractive.com/traits</string>
    <string name="means">  &#160;means &#8230;</string>
    <string name="message_posted_on">  Message posted on</string>
    <string name="message_not_posted_on">  Message not posted on</string> 
    <string name="sharing_on">  Sharing on</string> 
    <string name="edit_trait">  Edit Trait</string> 
    <string name="delete_trait">  Delete Trait</string> 
    <string name="type_text_to">  Type word to search</string> 
    <string name="message_posted">  Message posted</string>
    <string name="message_not_posted">  Message not posted</string> 
    <string name="google_plus_warning"> You can\'t share an image on Google+ without installing Google+ app on your device. Share text only.</string>     
    <string name="trait_already_exists"> Trait already exists</string> 
    <string name="trait_added"> Trait added</string>   
    <string name="already_exists">already exists</string> 
    <string name="added">added</string> 
    <string name="initializing_character_traits">Initializing character traits&#8230;</string>
    <string name="saved">Saved</string> 
    <string name="no_internet_please">No internet connectivity. Please check your settings</string>
    

</resources>